Bug 350865 - Yakuake doesn't handle QT_DEVICE_PIXEL_RATIO well
Summary: Yakuake doesn't handle QT_DEVICE_PIXEL_RATIO well
Status: RESOLVED FIXED
Alias: None
Product: yakuake
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git (Frameworks 5)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-01 17:49 UTC by Kai Uwe Broulik
Modified: 2015-08-07 21:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2015-08-01 17:49:46 UTC
When running my session with QT_DEVICE_PIXEL_RATIO Yakuake's window will be offset from my top panel and get too wide because all its coordinates are scaled and thus the offset for the panel is doubled and from what is is concerned the screen is double the width.

Reproducible: Always

Steps to Reproduce:
1. Run yakuake with QT_DEVICE_PIXEL_RATIO=2
2.
3.

Actual Results:  
The window will be twice the width of the monitor (if set to 100% width) and there will be a gap between the top panel and the yakuake window

Expected Results:  
It behaves as it would without scaling
Comment 1 David Edmundson 2015-08-06 15:26:55 UTC
Confirmed, I'm fixing it in frameworks
Comment 2 David Edmundson 2015-08-07 21:47:04 UTC
Git commit b932fe461a555f09886d577f734e6d6624654f76 by David Edmundson.
Committed on 07/08/2015 at 21:43.
Pushed by davidedmundson into branch 'master'.

Handle clients having a different device pixel ratio

Qt scales down the size of QScreens by the device pixel ratio; we should
make our windowing APIs match.

X (and KWin) deal with device dependent pixels, so everything needs to
be converted when communitcating geometry.

Abstraction happens in the main kwindowsystem so X and Wayland are both
supported.
Related: bug 350614, bug 347951
REVIEW: 124648

M  +20   -9    src/kwindowsystem.cpp

http://commits.kde.org/kwindowsystem/b932fe461a555f09886d577f734e6d6624654f76